# MyneCraft

./: README.md
Assignment-2/: .gitignore  HOW_TO_BUILD  Milestone4.1.md  README.md  create
Assignment-2/Assets/: Cube-Cactus.material  Cube-Dirt.material  Cube-Grass.material  Cube-Grass.mesh.xml  Cube-Ice.material  Cube-Leaves.material  Cube-Rock.material  Cube-Sand.material~  Cube-Snow.material  Cube-Snow.mesh  Cube-Stone.material  Cube-Wood.material  custom.material  torch.material  torch.mesh
Assignment-2/Linux-Build-Tools/: Makefile.am  makeit
Assignment-2/Source/Core/: Action.cpp  Action.h  Animation.cpp  Animation.h  Application.cpp  Application.h  Biome.cpp  Biome.h  BiomeManager.cpp  BiomeManager.h  BlockInfo.h  BulletContactCallback.cpp  BulletContactCallback.h  Chunk.cpp  Chunk.h  Cube.cpp  Cube.h  CubeManager.cpp  CubeManager.h  GameManager.cpp  GameObject.cpp  GameObject.h  HashCombine.h  Milestone4.1.md  OISManager.cpp  OISManager.h  OgreMotionState.cpp  Perlin.cpp  Perlin.h  Player.cpp  Player.h  PlayerObject.cpp  PlayerObject.h  Rand.h  Simulator.cpp  Simulator.h  SoundManager.cpp  SoundManager.h  StaticObject.cpp  StaticObject.h
